--- a/src/net/nexustools/jvm/compiler/GUI.form
+++ b/src/net/nexustools/jvm/compiler/GUI.form
@@ -346,8 +346,8 @@
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                       <StringArray count="2">
-                        <StringItem index="0" value="Initial"/>
-                        <StringItem index="1" value="Testing"/>
+                        <StringItem index="0" value="Sync"/>
+                        <StringItem index="1" value="Async"/>
                       </StringArray>
                     </Property>
                   </Properties>
